I've found that to get NoteLab to start using the exec() methods in the Runtime class one has to use the method exec(String[] cmdArr, String[] envArr, File workingDir) with the parent directory of the startup script set as the working directory, the envArr set to null, and the cmmdArr set to include one String, the full path to the startup script.  This is needed because if an array of Strings is not used, Java will tokenize the string given and use the wrong pathname if it has spaces.  Also Windows needs the working directory set to be able to start NoteLab.